--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -43,3 +43,36 @@ button{
 
 }
 
+.perfil{
+    display: flex;
+    margin: 40px 0;
+
+}
+
+.profile{
+    border-radius: 32px;
+    width: 64px;
+    height: 64px;
+    border: 2px solid white;
+    margin-right: 32px;
+
+}
+
+.perfil h3{
+    color: #999999;
+    font-size: 24px;
+    margin: 0;
+}
+
+.perfil span{
+    display: block;
+    color: #999999;
+    font-size: 24px;
+    margin: 0;
+}
+
+.perfil p{
+    color: #999999;
+    font-size: 12px;
+    margin:20px 0 0 0;
+}
